; ModuleID = '/home/carl/AnghaBench/linux/drivers/leds/extr_leds-wm8350.c_wm8350_led_shutdown.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/leds/extr_leds-wm8350.c_wm8350_led_shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.wm8350_led = type { i32 }

@LED_OFF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.platform_device*)* @wm8350_led_shutdown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wm8350_led_shutdown(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.wm8350_led*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %4 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %5 = call %struct.wm8350_led* @platform_get_drvdata(%struct.platform_device* %4)
  store %struct.wm8350_led* %5, %struct.wm8350_led** %3, align 8
  %6 = load i32, i32* @LED_OFF, align 4
  %7 = load %struct.wm8350_led*, %struct.wm8350_led** %3, align 8
  %8 = getelementptr inbounds %struct.wm8350_led, %struct.wm8350_led* %7, i32 0, i32 0
  store i32 %6, i32* %8, align 4
  %9 = load %struct.wm8350_led*, %struct.wm8350_led** %3, align 8
  %10 = call i32 @wm8350_led_disable(%struct.wm8350_led* %9)
  ret void
}

declare dso_local %struct.wm8350_led* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local i32 @wm8350_led_disable(%struct.wm8350_led*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
